[LayoutNG] Fix NG self hit testing condition for blocks

For normal boxes, self hit test is done when HitTestAction is kHitTestForeground.
However, for blocks, it's done only when HitTestAction is kHitTestBlockBackground
or kHitTestChildBlockBackground (see LayoutBlock::IsInSelfHitTestingPhase()).

Our NG hit test implementation doesn't consider the latter case, which is fixed
in this patch.

This patch adds 200+ passes to NG layout test.

Bug: 812470
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_layout_ng;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I03f92444eb431151942eb582305ef63419090a35
Reviewed-on: https://chromium-review.googlesource.com/920687
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537488}
Former-commit-id: 632a8dca2869b5017a8af6667a04a7ce44ae765e